# FactorishWasm

./: .gitignore  1.js  2.js  404.js  572.js  614.js  644.js  830.js  956.css  956.js  Cargo.toml  FactorishWasm.html  README.md  index.html  index.js  main.css  package-lock.json  package.json  webpack.config.js
.github/workflows/: rust-wasm-deploy.yml  rust-wasm.yml
img/: back32.pdn  ore-mine-exit.pdn  recipe-select.pdn
js/: images.js  main.js
js/components/: BurnerInventory.vue  CloseButton.vue  InventoryWindow.vue  ItemIcon.vue  MainMenuWindow.vue  NewGameWindow.vue  RecipeSelectorWindow.vue  ResearchSelectorWindow.vue  ToolTip.vue  ViewSettingsWindow.vue
src/: assembler.rs  boiler.rs  burner.rs  chest.rs  drop_items.rs  dyn_iter.rs  elect_pole.rs  electric_furnace.rs  factory.rs  fluid_box.rs  furnace.rs  gen_set.rs  inserter.rs  inventory.rs  items.rs  lab.rs  lib.rs  macros.rs  minimap.rs  offshore_pump.rs  ore_mine.rs  perf.rs  perlin_noise.rs  pipe.rs  power_network.rs  research.rs  scenarios.rs  splitter.rs  steam_engine.rs  structure.rs  terrain.rs  transport_belt.rs  underground_belt.rs  underground_pipe.rs  water_well.rs
src/components/: burner.rs  factory.rs  fluid_box.rs  mod.rs
src/gl/: assets.rs  render_gl.rs  shader_bundle.rs  utils.rs
src/structure/: iter.rs
static/: index.html  main.css
