[package]
name = "factorish-wasm"
version = "0.1.0"
authors = ["msakuta <masahiro.sakuta@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.95", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

js-sys = "0.3.52"
libm = "0.1.4"

serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
rotate-enum = "0.1.0"
serde-wasm-bindgen = "0.3.0"
once_cell = "1.8.0"
cgmath = "0.18.0"
smallvec = "1.6.1"
slice-of-array = "0.3.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'ImageBitmap',
    'Element',
    'HtmlElement',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'HtmlDivElement',
    'CssStyleDeclaration',
    'Node',
    'MouseEvent',
    'Document',
    'ImageData',
    'Window',
    'Storage',
    'Performance',
    'PerformanceTiming',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
    'WebGlTexture',
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2", "--enable-mutable-globals"]
